| Summary: | ASTERISK-22258: Queue crashes when publishing message to Stasis after ringing busy Agent | ||
| Reporter: | Kiril Valchev (djimbo) | Labels: | |
| Date Opened: | 2013-08-06 05:55:54 | Date Closed: | 2013-08-07 16:48:01 |
| Priority: | Critical | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | openSUSE 12.2 (x86_64) | Attachments: | ( 0) ASTERISK-22258-trunk.diff ( 1) backtrace.txt ( 2) core.7z |
| Description: | Application exit with signal 11 Segmentation fault after reject call from agent.
-- Executing [1234@ael-q:1] Queue("Console/dsp", "test") in new stack -- Music class requested but no musiconhold loaded. == Using SIP RTP TOS bits 184 == Using SIP RTP CoS mark 5 -- Called SIP/115 -- SIP/115-00000000 connected line has changed. Saving it until answer for Console/dsp -- SIP/115-00000000 is ringing -- SIP/115-00000000 is busy [Aug 6 09:43:55] ERROR[24877][C-00000000]: lock.c:140 __ast_pthread_mutex_destroy: astobj2.c line 483 (internal_ao2_ref): Error destroying mutex &obj_mutex->mutex.lock: Device or resource busy [Aug 6 09:43:55] ERROR[24877][C-00000000]: astobj2.c:165 INTERNAL_OBJ: bad magic number for object 0x7f83100403b8. Object is likely destroyed. -- Nobody picked up in 7000 ms | ||
| Comments: | By: Matt Jordan (mjordan) 2013-08-07 08:26:29.854-0500 It looks like a call to {{rna()}}, which handles raising the Stasis message, occurred after the agent channel was hung up. This patch reorders the calls so that the message indicating that the agent channel failed to answer occurs prior to hanging up the channel. Can you give this patch a try and see if it resolves the issue? Thanks! By: Kiril Valchev (djimbo) 2013-08-07 08:50:35.402-0500 Excellent. Works. Resolved this issue. | ||